--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "@nestjs/core": "7.0.0",
     "@nestjs/platform-express": "7.0.9",
     "@nestjs/typeorm": "7.0.0",
-    "bcryptjs": "^2.4.3",
+    "bcryptjs": "2.4.3",
     "class-transformer": "0.2.3",
     "class-validator": "0.12.2",
     "jsonwebtoken": "^8.5.1",
@@ -47,7 +47,7 @@
     "@types/supertest": "2.0.9",
     "@typescript-eslint/eslint-plugin": "2.31.0",
     "@typescript-eslint/parser": "2.31.0",
-    "dotenv": "^8.2.0",
+    "dotenv": "8.2.0",
     "eslint": "7.0.0",
     "eslint-config-prettier": "6.11.0",
     "eslint-plugin-import": "2.20.2",
